[gd_scene format=3 uid="uid://cewadnjen7l21"]

[ext_resource type="Script" uid="uid://lhwn0eq4bdj4" path="res://Scripts/RunStatusOverlay.gd" id="1_kfi2q"]
[ext_resource type="Script" uid="uid://bbvo786h2peys" path="res://Scripts/SoundButton.gd" id="2_dm1ej"]

[node name="RunStatusOverlay" type="CanvasLayer" unique_id=298814672]
layer = 100
script = ExtResource("1_kfi2q")

[node name="ToggleBtn" type="Button" parent="." unique_id=181002948]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 37.0
grow_horizontal = 0
text = "View Run Status"
script = ExtResource("2_dm1ej")

[node name="StatusPanel" type="PanelContainer" parent="." unique_id=559000723]
visible = false
custom_minimum_size = Vector2(300, 150)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_top = 37.0
offset_right = -6.0
offset_bottom = 77.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="StatusPanel" unique_id=1772304961]
layout_mode = 2

[node name="HpLabel" type="Label" parent="StatusPanel/VBoxContainer" unique_id=246930655]
layout_mode = 2
text = "SP"

[node name="SpLabel" type="Label" parent="StatusPanel/VBoxContainer" unique_id=129366008]
layout_mode = 2
text = "SP"

[node name="HSeparator" type="HSeparator" parent="StatusPanel/VBoxContainer" unique_id=1554747207]
layout_mode = 2

[node name="EquipLabel" type="Label" parent="StatusPanel/VBoxContainer" unique_id=266814624]
layout_mode = 2
text = "Equipment"

[node name="EquipmentGrid" type="HFlowContainer" parent="StatusPanel/VBoxContainer" unique_id=429487457]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
